[gd_scene load_steps=4 format=3 uid="uid://by5lxpge2f0d6"]

[ext_resource type="Script" path="res://inputmenu.gd" id="1_qi6p3"]
[ext_resource type="FontFile" uid="uid://c6hrglfhhssw7" path="res://assets/fonts/Kurland.otf" id="2_qwih4"]

[sub_resource type="LabelSettings" id="LabelSettings_db8s7"]
font = ExtResource("2_qwih4")
font_size = 64
shadow_size = 9
shadow_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qi6p3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.545098, 1, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.504
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -106.0
offset_right = 83.8
offset_bottom = -35.0
grow_horizontal = 2
text = "Temas"
label_settings = SubResource("LabelSettings_db8s7")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Label"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.282
anchor_right = 0.5
anchor_bottom = 1.282
offset_left = -243.5
offset_top = -20.022
offset_right = 256.5
offset_bottom = 19.978
theme_override_constants/separation = 16

[node name="LineEdit" type="LineEdit" parent="Label/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "tema 1"

[node name="LineEdit3" type="LineEdit" parent="Label/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "tema 2"

[node name="LineEdit2" type="LineEdit" parent="Label/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "tema 3"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -69.0
offset_right = -23.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qwih4")
theme_override_font_sizes/font_size = 45
text = "Continue"
flat = true

[connection signal="text_submitted" from="Label/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="Label/HBoxContainer/LineEdit3" to="." method="_on_line_edit_3_text_submitted"]
[connection signal="text_submitted" from="Label/HBoxContainer/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
